{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 28,
  "lineage": "68c9a3b3-ce40-4459-57a2-ce88ad407a52",
  "resources": [
    {
      "module": "module.test-vpc-module-01.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "prd-egress-inet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/useful-tempest-329712/global/routes/prd-egress-inet",
            "name": "prd-egress-inet",
            "network": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/networks/prd",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "useful-tempest-329712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/routes/prd-egress-inet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-vpc-module-01.module.subnets.google_compute_subnetwork.subnetwork",
            "module.test-vpc-module-01.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.test-vpc-module-01.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-west1/prd-subnet-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-21T09:38:47.667-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/useful-tempest-329712/regions/us-west1/subnetworks/prd-subnet-01",
            "ip_cidr_range": "10.10.10.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "prd-subnet-01",
            "network": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/networks/prd",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "useful-tempest-329712",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.64.0/24",
                "range_name": "prd-subnet-01-01"
              },
              {
                "ip_cidr_range": "192.168.65.0/24",
                "range_name": "prd-subnet-01-02"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/regions/us-west1/subnetworks/prd-subnet-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.test-vpc-module-01.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-west1/prd-subnet-02",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-21T09:38:47.975-07:00",
            "gateway_address": "10.10.20.1",
            "id": "projects/useful-tempest-329712/regions/us-west1/subnetworks/prd-subnet-02",
            "ip_cidr_range": "10.10.20.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "prd-subnet-02",
            "network": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/networks/prd",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "useful-tempest-329712",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.74.0/24",
                "range_name": "dev-subnet-01-01"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/regions/us-west1/subnetworks/prd-subnet-02",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.test-vpc-module-01.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-west1/prd-subnet-03",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-21T09:38:47.840-07:00",
            "gateway_address": "10.10.30.1",
            "id": "projects/useful-tempest-329712/regions/us-west1/subnetworks/prd-subnet-03",
            "ip_cidr_range": "10.10.30.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "prd-subnet-03",
            "network": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/networks/prd",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "useful-tempest-329712",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/regions/us-west1/subnetworks/prd-subnet-03",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.test-vpc-module-01.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.test-vpc-module-01.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/useful-tempest-329712/global/networks/prd",
            "mtu": 0,
            "name": "prd",
            "project": "useful-tempest-329712",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/networks/prd"
          }
        }
      ]
    },
    {
      "module": "module.test-vpc-module-02.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "dev-egress-inet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/useful-tempest-329712/global/routes/dev-egress-inet",
            "name": "dev-egress-inet",
            "network": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/networks/dev",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "useful-tempest-329712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/routes/dev-egress-inet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-vpc-module-02.module.subnets.google_compute_subnetwork.subnetwork",
            "module.test-vpc-module-02.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "dev-testapp-proxy",
          "schema_version": 0,
          "attributes": {
            "description": "route through proxy to reach app",
            "dest_range": "10.50.10.0/24",
            "id": "projects/useful-tempest-329712/global/routes/dev-testapp-proxy",
            "name": "dev-testapp-proxy",
            "network": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/networks/dev",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "10.10.40.10",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "useful-tempest-329712",
            "self_link": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/routes/dev-testapp-proxy",
            "tags": [
              "app-proxy"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test-vpc-module-02.module.subnets.google_compute_subnetwork.subnetwork",
            "module.test-vpc-module-02.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.test-vpc-module-02.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-west1/dev-subnet-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-21T09:38:48.089-07:00",
            "gateway_address": "10.10.40.1",
            "id": "projects/useful-tempest-329712/regions/us-west1/subnetworks/dev-subnet-01",
            "ip_cidr_range": "10.10.40.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-subnet-01",
            "network": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/networks/dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "useful-tempest-329712",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.75.0/24",
                "range_name": "dev-subnet-02-01"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/regions/us-west1/subnetworks/dev-subnet-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.test-vpc-module-02.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-west1/dev-subnet-02",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-21T09:38:47.861-07:00",
            "gateway_address": "10.10.50.1",
            "id": "projects/useful-tempest-329712/regions/us-west1/subnetworks/dev-subnet-02",
            "ip_cidr_range": "10.10.50.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "dev-subnet-02",
            "network": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/networks/dev",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "useful-tempest-329712",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/regions/us-west1/subnetworks/dev-subnet-02",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.test-vpc-module-02.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.test-vpc-module-02.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/useful-tempest-329712/global/networks/dev",
            "mtu": 0,
            "name": "dev",
            "project": "useful-tempest-329712",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/useful-tempest-329712/global/networks/dev"
          }
        }
      ]
    }
  ]
}